data/derived/sp14/progs/unify/prog4361.ml.out
Characters 363-387:
  buildAverage(build(rand, depth - 1))
              ^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         expr * expr
